<resources>
    <string name="app_name">Sleep Logger</string>
    <string name="date">Choose the date:</string>
    <string name="sleep_duration">How long did you sleep?</string>
    <string name="sleep_quality">How well did you sleep?</string>
    <string name="send_button">Send</string>
    <string name="minute_tv">minutes</string>
    <string name="hour_tv">hours</string>
    <string name="date_tv">Date:</string>
    <string name="sleep_duration_tv">Sleep duration:</string>
    <string name="sleep_quality_tv">Sleep quality:</string>
    <string name="confirm_delete">Confirm delete?</string>
    <string name="confirm_question">Are you sure you want to delete this log?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
</resources>