<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <data>
        <variable
            name="loggerViewModel"
            type="com.example.sleeplogger.loggerScreen.LoggerViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="60px">

        <TextView
            android:id="@+id/chooseDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/date"
            app:layout_constraintBottom_toTopOf="@+id/datePicker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            app:layout_constraintBottom_toTopOf="@+id/sleepDuration"
            tools:layout_editor_absoluteX="89dp" />

        <TextView
            android:id="@+id/sleepDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_duration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.204"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="356dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/hourInput"
                android:layout_width="73dp"
                android:layout_height="match_parent"
                android:layout_marginRight="12dp"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@+id/hour_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="388dp" />

            <TextView
                android:id="@+id/hourText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_tv"
                android:layout_marginRight="12dp"
                app:layout_constraintEnd_toStartOf="@+id/minute_input"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/hour_input"
                tools:layout_editor_absoluteY="402dp" />

            <EditText
                android:id="@+id/minuteInput"
                android:layout_width="82dp"
                android:layout_height="48dp"
                android:layout_marginRight="12dp"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@+id/minute_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/hour_text"
                tools:layout_editor_absoluteY="388dp" />

            <TextView
                android:id="@+id/minuteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minute_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/minute_input"
                tools:layout_editor_absoluteY="402dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/sleepQuality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_quality"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.203"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="446dp" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:stepSize="1"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="495dp" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_button"
            android:layout_marginStart="128dp"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="637dp" />
    </LinearLayout>
</layout>

